--- a/style.css
+++ b/style.css
@@ -1,16 +1,3 @@
-@font-face {
-  font-family: "NanumBarunGothic";
-  font-style: normal;
-  font-weight: 700;
-  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.eot");
-  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.eot?#iefix")
-      format("embedded-opentype"),
-    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.woff")
-      format("woff"),
-    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebBold.ttf")
-      format("truetype");
-}
-
 body{
   display:block;
   margin-left: auto;
@@ -23,11 +10,16 @@ h1{
   display:none;
 }
 
-.main{
+.box{
   display: block;
   width: 415px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.box__box{
+  height: 500px;
+  margin-top: 200px;
 }
 
 .main__title{
@@ -35,7 +27,6 @@ h1{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
-  margin-top: 200px;
 }
 
 .main__title img{
@@ -53,6 +44,10 @@ h1{
 
 .main__button--name{
   display: block;
+  width: 200px;
+  height: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 16px;
@@ -60,7 +55,6 @@ h1{
   border-radius: 32px;
   background-color: #ffffff;
   font-size: 20px;
-  padding: 10px 30px 10px 30px;
 }
 
 .main__button--start{
@@ -70,19 +64,45 @@ h1{
   border: none;
   border-radius: 25px;
   background-color: #d7c5b9;
-  padding: 10px 80px 10px 80px;
+  width: 300px;
+  height: 50px;
+
   color: white;
   font-size: 20px;
 }
 
-.main__logo{
+.question{
+  display: none;
+}
+
+.question__button{
+  display: block;
+  width: 315px;
+  height: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
+  border: none;
+  border-radius: 25px;
+  background-color: #d7c5b9;
+  color: white;
+  font-size: 20px;
+}
+
+.picture__test{
+  display:none;
+}
+
+.logo{
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 100px;
 }
 
-.main__logo img{
+.logo img{
   display: block;
   margin-left: auto;
   margin-right: auto;
