--- a/style.css
+++ b/style.css
@@ -1,141 +1,106 @@
-body{
-  display:block;
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
+body {
+  font-family: 'Nanum Gothic', sans-serif;
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 800px;
   background-color: #eae7e2;
-}
+  text-shadow: 2px 2px 5px #d7c5b9;
+  color: white; }
 
-h1{
-  display:none;
-}
+h1 {
+  display: none; }
 
-.box{
+mark {
+  background-color: #cfb2b4;
+  color: white;
+  padding: 5px;
+  font-size: 20px;
+  margin-top: 150px; }
+
+.box {
   display: block;
-  width: 415px;
   margin-left: auto;
   margin-right: auto;
-}
+  width: 415px; }
 
-.box__box{
+.box__box {
   height: 500px;
-  margin-top: 200px;
-}
+  margin-top: 200px; }
 
-.main{
-  display: block;
-}
+.main {
+  display: block; }
 
-.main__title{
+.main__title {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
-}
+  margin-bottom: 100px; }
+  .main__title img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
 
-.main__title img{
+.main__button {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
+  margin-bottom: 200px; }
 
-.main__button{
+.main__button--name {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 200px;
-}
-
-.main__button--name{
-  display: block;
   width: 200px;
   height: 50px;
   padding-left: 50px;
   padding-right: 50px;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 16px;
   border: solid 0.75px rgba(51, 51, 51, 0.3);
   border-radius: 32px;
   background-color: #ffffff;
   font-size: 20px;
-}
+  text-align: center; }
 
-.main__button--start{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border: none;
-  border-radius: 25px;
-  background-color: #d7c5b9;
-  width: 300px;
-  height: 50px;
-
-  color: white;
-  font-size: 20px;
-}
-
-.question{
+.question {
   display: none;
-}
+  text-align: center; }
 
-.question__button{
-  display: block;
-  width: 315px;
-  height: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 16px;
-  border: none;
-  border-radius: 25px;
-  background-color: #d7c5b9;
-  color: white;
-  font-size: 20px;
-}
+.question__title {
+  height: 70px;
+  line-height: 40px;
+  text-align: center; }
 
-.picture__test{
-  display:none;
-}
+.picture__test {
+  display: none; }
 
-.logo{
+.logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
-}
+  margin-bottom: 100px; }
+  .logo img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
 
-.logo img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+.picture {
+  display: none; }
 
-.picture{
-  display:none;
-}
-
-.process{
-  display:none;
-}
-
-
-
-
+.process {
+  display: none; }
 
 HTML CSS JSResult Skip Results Iframe
 body {
   font-family: sans-serif;
-  background-color: #eeeeee;
-}
+  background-color: #eeeeee; }
 
 .file-upload {
   background-color: #ffffff;
-  width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-}
+  width: 300px;
+  height: 300px;
+  margin: 0 auto; }
 
 .file-upload-btn {
   width: 100%;
@@ -149,25 +114,26 @@ body {
   transition: all .2s ease;
   outline: none;
   text-transform: uppercase;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .file-upload-btn:hover {
   background: #1AA059;
   color: #ffffff;
   transition: all .2s ease;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .file-upload-btn:active {
   border: 0;
-  transition: all .2s ease;
-}
+  transition: all .2s ease; }
 
 .file-upload-content {
   display: none;
   text-align: center;
-}
+  height: 100%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 300px; }
 
 .file-upload-input {
   position: absolute;
@@ -177,43 +143,33 @@ body {
   height: 100%;
   outline: none;
   opacity: 0;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .image-upload-wrap {
+  display: none;
   margin-top: 20px;
   border: 4px dashed #1FB264;
-  position: relative;
-}
+  position: relative; }
 
 .image-dropping,
 .image-upload-wrap:hover {
   background-color: #1FB264;
-  border: 4px dashed #ffffff;
-}
-
-.image-title-wrap {
-  padding: 0 15px 15px 15px;
-  color: #222;
-}
+  border: 4px dashed #ffffff; }
 
 .drag-text {
-  text-align: center;
-}
+  text-align: center; }
 
 .drag-text h3 {
   font-weight: 100;
   text-transform: uppercase;
   color: #15824B;
-  padding: 60px 0;
-}
+  padding: 60px 0; }
 
 .file-upload-image {
-  max-height: 200px;
-  max-width: 200px;
+  max-height: 280px;
+  max-width: 280px;
   margin: auto;
-  padding: 20px;
-}
+  vertical-align: middle; }
 
 .remove-image {
   width: 200px;
@@ -227,21 +183,233 @@ body {
   transition: all .2s ease;
   outline: none;
   text-transform: uppercase;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .remove-image:hover {
   background: #c13b2a;
   color: #ffffff;
   transition: all .2s ease;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .remove-image:active {
   border: 0;
-  transition: all .2s ease;
-}
+  transition: all .2s ease; }
 
+.main__container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 300px; }
 
+.main__button--start {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #d7c5b9;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: .2s;
+  transition: .2s;
+  margin: 0 auto;
+  border-radius: 25px;
+  color: #736e72;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  font-weight: 700; }
+  .main__button--start:after {
+    position: absolute;
+    -webkit-transition: .2s;
+    transition: .2s;
+    content: '';
+    width: 0;
+    left: 50%;
+    bottom: 0;
+    height: 3px;
+    background: #d7c5b9;
+    height: 120%;
+    left: -10%;
+    -webkit-transform: skewX(15deg);
+    transform: skewX(15deg);
+    z-index: -1; }
+  .main__button--start:hover {
+    transform: scale(1.05);
+    cursor: pointer; }
+    .main__button--start:hover:after {
+      width: 100%;
+      left: 0; }
+    .main__button--start:hover:nth-of-type(1) {
+      color: white; }
+      .main__button--start:hover:nth-of-type(1):after {
+        left: -10%;
+        width: 120%; }
 
-Resources1× 0.5× 0.25×Rerun
+.question__container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 300px;
+  margin-top: 50px;
+  margin-bottom: -15px;
+  display: table;
+  margin-left: auto;
+  margin-right: auto; }
+
+.question__button {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #d7c5b9;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: .2s;
+  transition: .2s;
+  margin: 0 auto;
+  border-radius: 25px;
+  color: #736e72;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  font-weight: 700;
+  height: 50px;
+  border-radius: 40px;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center; }
+  .question__button:after {
+    position: absolute;
+    -webkit-transition: .2s;
+    transition: .2s;
+    content: '';
+    width: 0;
+    left: 50%;
+    bottom: 0;
+    height: 3px;
+    background: #d7c5b9;
+    height: 120%;
+    left: -10%;
+    -webkit-transform: skewX(15deg);
+    transform: skewX(15deg);
+    z-index: -1; }
+  .question__button:hover {
+    transform: scale(1.05);
+    cursor: pointer; }
+    .question__button:hover:after {
+      width: 100%;
+      left: 0; }
+    .question__button:hover:nth-of-type(1) {
+      color: white; }
+      .question__button:hover:nth-of-type(1):after {
+        left: -10%;
+        width: 120%; }
+
+.picture__container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 300px;
+  margin-top: 40px;
+  margin-bottom: -25px; }
+
+.picture__button {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #d7c5b9;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: .2s;
+  transition: .2s;
+  margin: 0 auto;
+  border-radius: 25px;
+  color: #736e72;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  font-weight: 700; }
+  .picture__button:after {
+    position: absolute;
+    -webkit-transition: .2s;
+    transition: .2s;
+    content: '';
+    width: 0;
+    left: 50%;
+    bottom: 0;
+    height: 3px;
+    background: #d7c5b9;
+    height: 120%;
+    left: -10%;
+    -webkit-transform: skewX(15deg);
+    transform: skewX(15deg);
+    z-index: -1; }
+  .picture__button:hover {
+    transform: scale(1.05);
+    cursor: pointer; }
+    .picture__button:hover:after {
+      width: 100%;
+      left: 0; }
+    .picture__button:hover:nth-of-type(1) {
+      color: white; }
+      .picture__button:hover:nth-of-type(1):after {
+        left: -10%;
+        width: 120%; }
