--- a/style.css
+++ b/style.css
@@ -1,36 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
 body {
-  font-family: 'Nanum Gothic', sans-serif;
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 800px;
   background-color: #eae7e2;
-  text-shadow: 2px 2px 5px #d7c5b9;
-  color: white; }
+  font-family: 'Nanum Gothic', sans-serif; }
 
 h1 {
   display: none; }
 
 mark {
-  background-color: #cfb2b4;
-  color: white;
-  padding: 5px;
   font-size: 20px;
+  color: white;
+  background-color: #cfb2b4;
+  padding: 5px;
   margin-top: 150px; }
 
 .box {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 415px; }
-
-.box__box {
+  display: flex;
   height: 600px;
+  width: 400px;
+  justify-content: center;
+  align-items: center;
   margin-top: 100px; }
-
-.main {
-  display: block; }
 
 .main__title {
   display: block;
@@ -41,159 +37,6 @@ mark {
     display: block;
     margin-left: auto;
     margin-right: auto; }
-
-.main__button {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 200px; }
-
-.main__button--name {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
-  height: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-bottom: 16px;
-  border: solid 0.75px rgba(51, 51, 51, 0.3);
-  border-radius: 32px;
-  background-color: #ffffff;
-  font-size: 20px;
-  text-align: center; }
-
-.question {
-  display: none;
-  text-align: center; }
-
-.question__title {
-  height: 70px;
-  line-height: 40px;
-  text-align: center; }
-
-.picture__test {
-  display: none; }
-
-.logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 100px; }
-  .logo img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto; }
-
-.picture {
-  display: none; }
-
-.process {
-  display: none; }
-
-HTML CSS JSResult Skip Results Iframe
-body {
-  font-family: sans-serif;
-  background-color: #eeeeee; }
-
-.file-upload {
-  background-color: #ffffff;
-  width: 300px;
-  height: 300px;
-  margin: 0 auto; }
-
-.file-upload-btn {
-  width: 100%;
-  margin: 0;
-  color: #fff;
-  background: #1FB264;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  border-bottom: 4px solid #15824B;
-  transition: all .2s ease;
-  outline: none;
-  text-transform: uppercase;
-  font-weight: 700; }
-
-.file-upload-btn:hover {
-  background: #1AA059;
-  color: #ffffff;
-  transition: all .2s ease;
-  cursor: pointer; }
-
-.file-upload-btn:active {
-  border: 0;
-  transition: all .2s ease; }
-
-.file-upload-content {
-  display: none;
-  text-align: center;
-  height: 100%;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  line-height: 300px; }
-
-.file-upload-input {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  outline: none;
-  opacity: 0;
-  cursor: pointer; }
-
-.image-upload-wrap {
-  display: none;
-  margin-top: 20px;
-  border: 4px dashed #1FB264;
-  position: relative; }
-
-.image-dropping,
-.image-upload-wrap:hover {
-  background-color: #1FB264;
-  border: 4px dashed #ffffff; }
-
-.drag-text {
-  text-align: center; }
-
-.drag-text h3 {
-  font-weight: 100;
-  text-transform: uppercase;
-  color: #15824B;
-  padding: 60px 0; }
-
-.file-upload-image {
-  max-height: 280px;
-  max-width: 280px;
-  margin: auto;
-  vertical-align: middle; }
-
-.remove-image {
-  width: 200px;
-  margin: 0;
-  color: #fff;
-  background: #cd4535;
-  border: none;
-  padding: 10px;
-  border-radius: 4px;
-  border-bottom: 4px solid #b02818;
-  transition: all .2s ease;
-  outline: none;
-  text-transform: uppercase;
-  font-weight: 700; }
-
-.remove-image:hover {
-  background: #c13b2a;
-  color: #ffffff;
-  transition: all .2s ease;
-  cursor: pointer; }
-
-.remove-image:active {
-  border: 0;
-  transition: all .2s ease; }
 
 .main__container {
   display: -webkit-box;
@@ -216,6 +59,11 @@ body {
   flex-wrap: wrap;
   margin: 0 auto;
   width: 300px; }
+
+.main__button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
 
 .main__button--start {
   -webkit-box-flex: 1;
@@ -264,6 +112,38 @@ body {
         left: -10%;
         width: 120%; }
 
+.main__button--name {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-bottom: 16px;
+  border: solid 0.75px rgba(51, 51, 51, 0.3);
+  border-radius: 32px;
+  background-color: #ffffff;
+  font-size: 20px;
+  text-align: center; }
+  .main__button--name:focus {
+    outline: none; }
+
+.question {
+  display: none; }
+
+.question__page {
+  display: block;
+  text-align: right;
+  position: relative;
+  top: -10px;
+  color: #736e72; }
+
+.question__title, .picture__title, .result__title {
+  height: 70px;
+  line-height: 40px;
+  text-align: center; }
+
 .question__container {
   display: -webkit-box;
   display: -webkit-flex;
@@ -285,11 +165,8 @@ body {
   flex-wrap: wrap;
   margin: 0 auto;
   width: 300px;
-  margin-top: 50px;
-  margin-bottom: -15px;
   display: table;
-  margin-left: auto;
-  margin-right: auto; }
+  margin: 50px auto -15px auto; }
 
 .question__button {
   -webkit-box-flex: 1;
@@ -343,6 +220,34 @@ body {
         left: -10%;
         width: 120%; }
 
+.picture {
+  display: none; }
+
+.picture__upload {
+  background-color: #ffffff;
+  width: 300px;
+  height: 300px;
+  border-radius: 30px; }
+
+.picture__upload--content {
+  display: none;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 300px; }
+  .picture__upload--content img {
+    height: 300px;
+    width: 300px; }
+
+.picture__upload--image {
+  object-fit: cover;
+  margin: auto;
+  vertical-align: middle;
+  border-radius: 30px; }
+
+.picture__upload--wrap {
+  display: none; }
+
 .picture__container {
   display: -webkit-box;
   display: -webkit-flex;
@@ -365,7 +270,8 @@ body {
   margin: 0 auto;
   width: 300px;
   margin-top: 40px;
-  margin-bottom: -25px; }
+  margin-bottom: -25px;
+  width: 200px; }
 
 .picture__button {
   -webkit-box-flex: 1;
@@ -414,15 +320,18 @@ body {
         left: -10%;
         width: 120%; }
 
-.loading {
+.process {
+  display: none; }
+
+.process__loading {
   width: 100px;
   height: 100px;
-  margin-top: 130px;
+  margin-top: -100px;
   margin-left: auto;
   margin-right: auto;
   background: none; }
 
-.loading > div {
+.process__loading > div {
   width: 60px;
   height: 60px;
   position: relative;
@@ -431,7 +340,7 @@ body {
   top: 50%;
   margin-top: -30px; }
 
-.loading > div > div {
+.process__loading > div > div {
   content: '';
   position: absolute;
   width: 16px;
@@ -443,14 +352,14 @@ body {
   border-radius: 8px;
   animation: spin-a 2s infinite cubic-bezier(0.5, 0, 0.5, 1); }
 
-.loading > div > .c2 {
+.process__loading > div > .process__object--2 {
   top: 10px;
   left: auto;
   right: 10px;
   transform-origin: -4px 20px;
   animation: spin-b 2s infinite cubic-bezier(0.5, 0, 0.5, 1); }
 
-.loading > div > .c3 {
+.process__loading > div > .process__object--3 {
   top: auto;
   left: auto;
   right: 10px;
@@ -458,7 +367,7 @@ body {
   transform-origin: -4px -4px;
   animation: spin-c 2s infinite cubic-bezier(0.5, 0, 0.5, 1); }
 
-.loading > div > .c4 {
+.process__loading > div > .process__object--4 {
   top: auto;
   bottom: 10px;
   transform-origin: 20px -4px;
@@ -514,14 +423,106 @@ body {
   100% {
     transform: rotate(360deg); } }
 
-.loading > span {
-  width: 100px;
-  height: 30px;
+.result {
+  display: none; }
+
+.result__container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 300px;
+  width: 200px; }
+
+.result__image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  width: 300px;
+  height: 300px;
+  border-radius: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px; }
+
+.result__textbox {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  width: 301px; }
+
+.result__button {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #d7c5b9;
+  text-align: center;
   position: relative;
+  overflow: hidden;
+  -webkit-transition: .2s;
+  transition: .2s;
+  margin: 0 auto;
+  border-radius: 25px;
+  color: #736e72;
+  height: 30px;
+  line-height: 30px;
+  font-size: 20px;
+  font-weight: 700; }
+  .result__button:after {
+    position: absolute;
+    -webkit-transition: .2s;
+    transition: .2s;
+    content: '';
+    width: 0;
+    left: 50%;
+    bottom: 0;
+    height: 3px;
+    background: #d7c5b9;
+    height: 120%;
+    left: -10%;
+    -webkit-transform: skewX(15deg);
+    transform: skewX(15deg);
+    z-index: -1; }
+  .result__button:hover {
+    transform: scale(1.05);
+    cursor: pointer; }
+    .result__button:hover:after {
+      width: 100%;
+      left: 0; }
+    .result__button:hover:nth-of-type(1) {
+      color: white; }
+      .result__button:hover:nth-of-type(1):after {
+        left: -10%;
+        width: 120%; }
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  bottom: 10%;
   left: 50%;
-  margin-left: -50px;
-  top: 50%;
-  margin-top: -150px;
-  color: #ff8c00;
-  font-size: 12px;
-  text-align: center; }
+  transform: translate(-50%); }
+  .logo img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto; }
