--- a/style.css
+++ b/style.css
@@ -129,7 +129,9 @@ mark {
     outline: none; }
 
 .question {
-  display: none;
+  display: none; }
+
+#questionSex {
   margin-top: 30px; }
 
 .question__page {
@@ -221,13 +223,15 @@ mark {
         width: 120%; }
 
 .picture {
-  display: none; }
+  display: none;
+  margin-top: -50px; }
 
 .picture__upload {
   background-color: #ffffff;
   width: 300px;
   height: 300px;
-  border-radius: 30px; }
+  border-radius: 30px;
+  margin-bottom: 30px; }
 
 .picture__upload--content {
   display: none;
@@ -241,7 +245,6 @@ mark {
 
 .picture__upload--image {
   object-fit: cover;
-  margin: auto;
   vertical-align: middle;
   border-radius: 30px; }
 
@@ -269,8 +272,7 @@ mark {
   flex-wrap: wrap;
   margin: 0 auto;
   width: 300px;
-  margin-top: 40px;
-  margin-bottom: -25px;
+  margin-top: 10px;
   width: 200px; }
 
 .picture__button {
@@ -292,7 +294,9 @@ mark {
   height: 30px;
   line-height: 30px;
   font-size: 20px;
-  font-weight: 700; }
+  font-weight: 700;
+  line-height: 20px;
+  height: 20px; }
   .picture__button:after {
     position: absolute;
     -webkit-transition: .2s;
@@ -326,7 +330,8 @@ mark {
 .process__loading {
   width: 100px;
   height: 100px;
-  margin-top: -100px;
+  margin-top: 50px;
+  margin-bottom: 150px;
   margin-left: auto;
   margin-right: auto;
   background: none; }
@@ -424,7 +429,8 @@ mark {
     transform: rotate(360deg); } }
 
 .result {
-  display: none; }
+  display: none;
+  margin-top: -50px; }
 
 .result__container {
   display: -webkit-box;
@@ -517,7 +523,8 @@ mark {
 .logo {
   display: block;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  margin-top: 100px; }
   .logo img {
     display: block;
     margin-left: auto;
