--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,9 @@ mark{
 
 .question{
   display: none;
+}
+
+#questionSex{
   margin-top: 30px;
 }
 
@@ -196,6 +199,7 @@ mark{
 
 .picture{
   display:none;
+  margin-top: -50px;
 }
 
 .picture__title{
@@ -207,6 +211,7 @@ mark{
   width: 300px;
   height: 300px;
   border-radius: 30px;
+  margin-bottom: 30px;
 }
 
 .picture__upload--content {
@@ -223,7 +228,6 @@ mark{
 
 .picture__upload--image {
   object-fit: cover;
-  margin: auto;
   vertical-align: middle;
   border-radius: 30px;
 }
@@ -235,13 +239,15 @@ mark{
 
 .picture__container {
   @include container-style;
-  margin-top: 40px;
-  margin-bottom: -25px;
+  margin-top: 10px;
+  // margin-bottom: 0px;
   width: 200px;
 }
 
 .picture__button {
   @include button-style;
+  line-height: 20px;
+  height: 20px;
 }
 
 .process{
@@ -251,7 +257,8 @@ mark{
 .process__loading {
   width: 100px;
   height: 100px;
-  margin-top: -100px;
+  margin-top: 50px;
+  margin-bottom: 150px;
   margin-left: auto;
   margin-right: auto;
   background: none;
@@ -334,6 +341,7 @@ mark{
 
 .result{
   display: none;
+  margin-top: -50px;
 }
 
 .result__title{
@@ -367,6 +375,7 @@ mark{
 
 .logo{
   @include block-style;
+  margin-top: 100px;
   img{
     @include block-style;
   }
