--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ mark {
   display: flex;
   height: 500px;
   width: 400px;
-  margin-top: 100px;
+  margin-top: 130px;
   justify-content: center; }
 
 .main__title {
@@ -524,7 +524,9 @@ mark {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px; }
+  position: fixed;
+  bottom: 140px;
+  left: 147px; }
   .logo img {
     display: block;
     margin-left: auto;
