--- a/style.scss
+++ b/style.scss
@@ -116,7 +116,7 @@ mark{
   display: flex;
   height: 500px;
   width: 400px;
-  margin-top: 100px;
+  margin-top: 130px;
 
   justify-content: center;
 }
@@ -375,7 +375,9 @@ mark{
 
 .logo{
   @include block-style;
-  margin-top: 100px;
+  position: fixed;
+  bottom: 140px;
+  left: 147px;
   img{
     @include block-style;
   }
