Test: Test final

--- a/style.scss
+++ b/style.scss
@@ -376,8 +376,8 @@ mark{
 .logo{
   @include block-style;
   position: fixed;
-  bottom: 140px;
-  left: 147px;
+  bottom: 16%;
+  left: 35.5%;
   img{
     @include block-style;
   }
