--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ mark {
   display: flex;
   height: 500px;
   width: 400px;
-  margin-top: 130px;
+  margin-top: 100px;
   justify-content: center; }
 
 .main__title {
@@ -520,17 +520,29 @@ mark {
         left: -10%;
         width: 120%; }
 
-.logo {
+.result__logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  position: fixed;
-  bottom: 140px;
-  left: 147px; }
-  .logo img {
+  display: none;
+  margin-top: 30px; }
+  .result__logo img {
     display: block;
     margin-left: auto;
     margin-right: auto; }
+
+.box__logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  bottom: 100px;
+  left: 50%; }
+  .box__logo img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateX(-50%); }
 
 @media (max-width: 416px) {
   body {
