--- a/style.scss
+++ b/style.scss
@@ -116,7 +116,7 @@ mark{
   display: flex;
   height: 500px;
   width: 400px;
-  margin-top: 130px;
+  margin-top: 100px;
 
   justify-content: center;
 }
@@ -373,13 +373,23 @@ mark{
   @include button-style;
 }
 
-.logo{
+.result__logo{
   @include block-style;
-  position: fixed;
-  bottom: 16%;
-  left: 35.5%;
+  display: none;
+  margin-top: 30px;
   img{
     @include block-style;
+  }
+}
+
+.box__logo{
+  @include block-style;
+  position: absolute;
+  bottom:100px;
+  left: 50%;
+  img{
+    @include block-style;
+    transform: translateX(-50%);
   }
 }
 
