--- a/style.scss
+++ b/style.scss
@@ -385,7 +385,7 @@ mark{
 .box__logo{
   @include block-style;
   position: absolute;
-  bottom:100px;
+  bottom:5%;
   left: 50%;
   img{
     @include block-style;
