--- a/style.scss
+++ b/style.scss
@@ -377,6 +377,7 @@ mark{
   @include block-style;
   display: none;
   margin-top: 30px;
+  padding-bottom: 30px;
   img{
     @include block-style;
   }
