--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 800px;
+  width: 100%;
   background-color: #eae7e2;
   font-family: 'Nanum Gothic', sans-serif; }
 
@@ -250,6 +250,18 @@ mark {
 
 .picture__upload--wrap {
   display: none; }
+
+.picture__upload--text {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 300px;
+  color: white;
+  font-size: 20px; }
+  .picture__upload--text span {
+    background-color: #d7c5b9;
+    padding: 5px; }
 
 .picture__container {
   display: -webkit-box;
@@ -526,7 +538,10 @@ mark {
   margin-right: auto;
   display: none;
   margin-top: 30px;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  transition: .5s; }
+  .result__logo:hover {
+    transform: scale(1.1); }
   .result__logo img {
     display: block;
     margin-left: auto;
@@ -538,12 +553,16 @@ mark {
   margin-right: auto;
   position: absolute;
   bottom: 5%;
-  left: 50%; }
+  left: 50%;
+  transition: .5s; }
   .box__logo img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     transform: translateX(-50%); }
+  .box__logo:hover {
+    transform: scale(1.1);
+    left: 50.5%; }
 
 @media (max-width: 416px) {
   body {
