--- a/style.css
+++ b/style.css
@@ -564,6 +564,14 @@ mark {
     transform: scale(1.1);
     left: 50.6%; }
 
+.at-share-btn-elements {
+  text-align: center;
+  margin-bottom: 20px; }
+
+.at-share-btn-elements a:focus {
+  border: none;
+  outline: none; }
+
 @media (max-width: 416px) {
   body {
     width: 415px; } }
