--- a/style.css
+++ b/style.css
@@ -478,12 +478,51 @@ mark {
   margin-top: 30px;
   margin-bottom: 30px; }
 
-.result__textbox {
+.result__compare {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 35px; }
+
+.result__compare--box {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.result__image--small {
+  display: inline-block;
+  background-color: white;
+  width: 125px;
+  height: 125px;
+  border-radius: 15px;
+  margin-top: 5px;
+  margin-bottom: 10px; }
+
+.result__image--text {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-  width: 301px; }
+  margin-bottom: 25x;
+  color: #736e72; }
+
+.result__textbox {
+  display: flex;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  width: 301px;
+  justify-content: center; }
+
+.result__text {
+  color: #736e72;
+  font-size: 17px;
+  width: 250px; }
+
+.result__text--header {
+  text-align: center; }
+
+.result__text--bold {
+  text-align: center;
+  font-weight: 700;
+  font-size: 50px;
+  margin-top: 5px;
+  margin-bottom: 25px; }
 
 .result__button {
   -webkit-box-flex: 1;
