--- a/style.scss
+++ b/style.scss
@@ -375,10 +375,58 @@ mark{
   margin-bottom: 30px;
 }
 
+.result__compare{
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 35px;
+}
+
+.result__compare--box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.result__image--small{
+  display: inline-block;
+  background-color: white;
+  width: 125px;
+  height: 125px;
+  border-radius: 15px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.result__image--text{
+  display:block;
+  margin-bottom: 25x;
+  color: $text-color;
+}
+
 .result__textbox{
-  @include block-style;
-  margin-bottom: 30px;
+  display: flex;
+  margin: 0 auto;
+  margin-bottom: 15px;
   width: 301px;
+  justify-content: center;
+}
+
+.result__text{
+  color: $text-color;
+  font-size: 17px;
+  width: 250px;
+}
+
+.result__text--header{
+  text-align: center;
+}
+
+.result__text--bold{
+  text-align: center;
+  font-weight: 700;
+  font-size: 50px;
+  margin-top: 5px;
+  margin-bottom: 25px;
 }
 
 .result__button{
