--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ mark {
   top: -10px;
   color: #736e72; }
 
-.question__title, .picture__title, .result__title {
+.question__title, .picture__title {
   height: 70px;
   line-height: 40px;
   text-align: center; }
@@ -444,6 +444,14 @@ mark {
   display: none;
   margin-top: -50px; }
 
+.result__title {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  background-color: #d7c5b9;
+  color: white;
+  padding: 3px; }
+
 .result__container {
   display: -webkit-box;
   display: -webkit-flex;
@@ -504,10 +512,11 @@ mark {
 
 .result__textbox {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   margin-bottom: 15px;
-  width: 301px;
-  justify-content: center; }
+  width: 301px; }
 
 .result__text {
   color: #736e72;
@@ -515,7 +524,8 @@ mark {
   width: 250px; }
 
 .result__text--header {
-  text-align: center; }
+  text-align: center;
+  color: #736e72; }
 
 .result__text--bold {
   text-align: center;
