--- a/style.scss
+++ b/style.scss
@@ -357,7 +357,12 @@ mark{
 }
 
 .result__title{
-  @extend .question__title;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  background-color: $base-color;
+  color:white;
+  padding: 3px;
 }
 
 .result__container{
@@ -405,10 +410,11 @@ mark{
 
 .result__textbox{
   display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   margin-bottom: 15px;
   width: 301px;
-  justify-content: center;
 }
 
 .result__text{
@@ -419,6 +425,7 @@ mark{
 
 .result__text--header{
   text-align: center;
+  color: $text-color;
 }
 
 .result__text--bold{
