--- a/style.scss
+++ b/style.scss
@@ -117,8 +117,8 @@ mark{
   height: 500px;
   width: 400px;
   margin-top: 100px;
-
-  justify-content: center;
+  flex-direction: column;
+  align-items:center;
 }
 
 .main__title{
@@ -471,7 +471,8 @@ mark{
 }
 
 .ad{
-  display:block;
+  position:absolute;
+  top: 0;
 }
 
 //for addthis
