--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ mark {
   height: 500px;
   width: 400px;
   margin-top: 100px;
-  justify-content: center; }
+  flex-direction: column;
+  align-items: center; }
 
 .main__title {
   display: block;
@@ -612,6 +613,10 @@ mark {
   .box__logo:hover {
     transform: scale(1.1);
     left: 50.6%; }
+
+.ad {
+  position: absolute;
+  top: 0; }
 
 .at-share-btn-elements {
   text-align: center;
