--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
   display: none; }
 
 mark {
-  font-size: 20px;
+  font-size: 1.1em;
   color: white;
   background-color: #cfb2b4;
   padding: 5px;
