--- a/style.css
+++ b/style.css
@@ -603,20 +603,14 @@ mark {
   margin-right: auto;
   position: absolute;
   bottom: 5%;
-  left: 50%;
+  right: 5%;
   transition: .5s; }
-  .box__logo img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    transform: translateX(-50%); }
   .box__logo:hover {
-    transform: scale(1.1);
-    left: 50.6%; }
+    transform: scale(1.1); }
 
 .ad {
   position: absolute;
-  top: 0; }
+  bottom: 0; }
 
 .at-share-btn-elements {
   text-align: center;
