--- a/style.scss
+++ b/style.scss
@@ -458,21 +458,16 @@ mark{
   @include block-style;
   position: absolute;
   bottom:5%;
-  left: 50%;
+  right: 5%;
   transition: .5s;
-  img{
-    @include block-style;
-    transform: translateX(-50%);
-  }
   &:hover{
     transform: scale(1.1);
-    left:50.6%;
   }
 }
 
 .ad{
   position:absolute;
-  top: 0;
+  bottom: 0;
 }
 
 //for addthis
