--- a/style.scss
+++ b/style.scss
@@ -444,6 +444,7 @@ mark{
   @include block-style;
   display: none;
   margin-top: 30px;
+  margin-bottom: 100px;
   padding-bottom: 30px;
   transition: .5s;
   &:hover{
