--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ mark {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  height: 500px;
   width: 360px;
-  margin-top: 130px;
+  margin: 7em auto;
   flex-direction: column;
   align-items: center; }
 
@@ -588,7 +587,7 @@ mark {
   margin-right: auto;
   display: none;
   margin-top: 30px;
-  margin-bottom: 100px;
+  margin-bottom: 60px;
   padding-bottom: 30px;
   transition: .5s; }
   .result__logo:hover {
