--- a/style.scss
+++ b/style.scss
@@ -114,9 +114,8 @@ mark{
 .box{
   @include block-style;
   display: flex;
-  height: 500px;
   width: 360px;
-  margin-top: 130px;
+  margin: 7em auto;
   flex-direction: column;
   align-items:center;
 }
@@ -444,7 +443,7 @@ mark{
   @include block-style;
   display: none;
   margin-top: 30px;
-  margin-bottom: 100px;
+  margin-bottom: 60px;
   padding-bottom: 30px;
   transition: .5s;
   &:hover{
