--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  width: 100vw;
   background-color: #eae7e2;
   font-family: 'Nanum Gothic', sans-serif; }
 
@@ -499,8 +499,7 @@ mark {
 
 .result__compare {
   display: flex;
-  justify-content: space-around;
-  margin-bottom: 35px; }
+  justify-content: space-around; }
 
 .result__compare--box {
   display: flex;
@@ -550,6 +549,11 @@ mark {
   font-size: 50px;
   margin-top: 5px;
   margin-bottom: 25px; }
+
+.result__alert {
+  font-size: .5em;
+  text-align: center;
+  margin-bottom: 8em; }
 
 .result__button {
   -webkit-box-flex: 1;
